--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,4 +1,6 @@
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_URI} ^/styles.*$
+RewriteRule ^(.*)$ - [L,NC]
 RewriteRule ^ index.php [QSA,L]
